--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.2",
     "@mui/styled-engine": "^6.1.2",
+    "@mui/x-data-grid": "^7.19.0",
     "chart.js": "^4.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
