--- a/package.json
+++ b/package.json
@@ -34,5 +34,6 @@
     "sass-embedded": "^1.79.4",
     "vite": "^5.4.14",
     "vite-jsconfig-paths": "^2.0.1"
-  }
+  },
+  "main": "./src/index.js"
 }
